# instant-segment

./: .gitignore  Cargo.toml  Makefile  README.md  deny.toml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml  rust.yml
benches/: bench.rs
data/: README.md  en-unigrams.txt  grab.py
examples/: contrived.py  contrived.rs
instant-segment/: Cargo.toml
instant-segment-py/: Cargo.toml  instant_segment.pyi  pyproject.toml
instant-segment-py/examples/: contrived.py
instant-segment-py/src/: lib.rs
instant-segment-py/test/: test.py
instant-segment/benches/: bench.rs
instant-segment/examples/: contrived.rs  merge.rs
instant-segment/src/: lib.rs  test_cases.rs  test_data.rs
src/: lib.rs  test_cases.rs  test_data.rs
tests/: basic.rs
