[package]
name = "word-segmenters"
version = "0.1.1"
authors = ["Dirkjan Ochtman <dirkjan@ochtman.nl>"]
edition = "2018"
license = "Apache-2.0"
description = "Fast English word segmentation"
homepage = "https://github.com/InstantDomainSearch/word-segmenters"
repository = "https://github.com/InstantDomainSearch/word-segmenters"
documentation = "https://docs.rs/word-segmenters"

[dependencies]
ahash = "0.5.7"
thiserror = "1.0.22"

[dev-dependencies]
bencher = "0.1.5"
once_cell = "1.4"

[[bench]]
name = "bench"
harness = false
