[package]
name = "instant-segment"
version = "0.3.1"
authors = ["Dirkjan Ochtman <dirkjan@ochtman.nl>"]
edition = "2018"
license = "Apache-2.0"
description = "Fast English word segmentation"
homepage = "https://github.com/InstantDomainSearch/instant-segment"
repository = "https://github.com/InstantDomainSearch/instant-segment"
documentation = "https://docs.rs/instant-segment"

[features]
__test_data = []

[dependencies]
ahash = "0.7.0"
smartstring = "0.2.5"

[dev-dependencies]
bencher = "0.1.5"
once_cell = "1.4"

[[bench]]
name = "bench"
harness = false
