[metadata]
name = instant-segment
version = 0.1.4
author = Dirkjan Ochtman
author_email = dirkjan@ochtman.nl
description = Fast English word segmentation
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source Code = https://github.com/InstantDomain/instant-segment

[options]
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3; setuptools-rust
package_dir =
     = instant-segment-py
zip_safe = False
