[package]
name = "instant-segment-py"
version = "0.1.5"
edition = "2018"
license = "Apache-2.0"
workspace = ".."
description = "Fast English word segmentation"
homepage = "https://github.com/InstantDomain/instant-segment"
repository = "https://github.com/InstantDomain/instant-segment"
documentation = "https://docs.rs/instant-segment"
readme = "../README.md"

[lib]
name = "instant_segment"
crate-type = ["cdylib"]

[dependencies]
ahash = "0.8"
bincode = "1.3.2"
instant-segment = { version = "0.10", path = "../instant-segment", features = ["with-serde"] }
pyo3 = { version = "0.20", features = ["extension-module"] }
smartstring = "1"

[package.metadata.maturin]
name = "instant-segment"
