[package]
name = "instant-segment-py"
version = "0.1.9"
edition = "2018"
rust-version = "1.74"
license = "Apache-2.0"
workspace = ".."
description = "Fast English word segmentation"
homepage = "https://github.com/InstantDomain/instant-segment"
repository = "https://github.com/InstantDomain/instant-segment"
documentation = "https://docs.rs/instant-segment"
readme = "../README.md"

[lib]
name = "instant_segment"
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.2"
instant-segment = { version = "0.11", path = "../instant-segment", features = ["with-serde"] }
pyo3 = { version = "0.25", features = ["extension-module"] }
smartstring = "1"
