[package]
name = "instant-segment"
version = "0.10.1"
edition = "2018"
license = "Apache-2.0"
description = "Fast English word segmentation"
homepage = "https://github.com/InstantDomain/instant-segment"
repository = "https://github.com/InstantDomain/instant-segment"
documentation = "https://docs.rs/instant-segment"
readme = "../README.md"

[features]
__test_data = ["test-cases"]
test-cases = []
with-serde = ["serde", "ahash/serde", "smartstring/serde"]

[dependencies]
ahash = "0.8"
smartstring = "1"
serde = { version = "1.0.123", features = ["derive"], optional = true }

[dev-dependencies]
bencher = "0.1.5"
once_cell = "1.4"
rayon = "1.5.1"

[[bench]]
name = "bench"
harness = false
