[package]
name = "instant-segment"
version = "0.11.0"
edition = "2018"
rust-version = "1.65"
license = "Apache-2.0"
description = "Fast English word segmentation"
homepage = "https://github.com/InstantDomain/instant-segment"
repository = "https://github.com/InstantDomain/instant-segment"
documentation = "https://docs.rs/instant-segment"
readme = "../README.md"

[features]
__test_data = ["test-cases"]
test-cases = []
with-serde = ["serde", "smartstring/serde"]

[dependencies]
rustc-hash = "1.1.0"
smartstring = "1"
serde = { version = "1.0.123", features = ["derive"], optional = true }

[dev-dependencies]
bencher = "0.1.5"
once_cell = "1.4"
rayon = "1.5.1"

[[bench]]
name = "bench"
harness = false
